--- a/pom.xml
+++ b/pom.xml
@@ -12,5 +12,13 @@
         <maven.compiler.source>8</maven.compiler.source>
         <maven.compiler.target>8</maven.compiler.target>
     </properties>
+    <dependencies>
+        <dependency>
+            <groupId>org.tribuo</groupId>
+            <artifactId>tribuo-all</artifactId>
+            <version>4.0.2</version>
+            <type>pom</type>
+        </dependency>
+    </dependencies>
 
 </project>
